--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@vue/cli": "^5.0.8",
+    "@vue/compiler-sfc": "^3.3.4",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "global": "^4.4.0",
     "typescript": "^4.9.3",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-style-loader": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -23,7 +25,7 @@
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
