--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@lehoczky/vue-termynal": "^1.3.0",
     "@vue/cli": "^5.0.8",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
