--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "global": "^4.4.0",
     "typescript": "^4.9.3",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.1.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -31,7 +32,8 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vue-cli-plugin-i18n": "~2.3.2"
   },
   "eslintConfig": {
     "root": true,
